Fix spacing in Menu Item

--- a/src/main/resources/view/ModCraft.css
+++ b/src/main/resources/view/ModCraft.css
@@ -138,7 +138,7 @@
     -fx-font-family: "Segoe UI Light";
     -fx-text-fill: black;
     -fx-opacity: 0.9;
-    -fx-padding: 0 0 0 0;
+    -fx-padding: 0 5 0 0
 }
 
 .menu-bar .menu-button:hover, .menu-bar .menu-button:focused, .menu-bar .menu-button:showing {
